--- a/Lab2/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/Lab2/WpfApp1/WpfApp1/MainWindow.xaml
@@ -1,12 +1,27 @@
 ﻿<Window x:Class="WpfApp1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="Task1" Height="300" Width="400">
+    <Grid ShowGridLines="True">
+        <!--стовпці-->
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <!--рядкі-->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="4*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <!-- пишем Label по центру середини-->
+        <Label Grid.Row="0" Grid.Column="1" Content="Label" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <!-- TextBox на весь рядок -->
+        <TextBox Grid.Row="1" Grid.Column="0" Text="TextBox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+        <!-- Button у третьому рядку-->
+        <Button Grid.Row="2" Grid.Column="1" Content="Button" Margin="5"/>
     </Grid>
 </Window>
