--- a/Lab2/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/Lab2/WpfApp1/WpfApp1/MainWindow.xaml
@@ -2,45 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Task1" Height="300" Width="600">
+    <DockPanel LastChildFill="False">
+        <Label DockPanel.Dock="Top" HorizontalAlignment="Center">Label</Label>
+        <TextBox DockPanel.Dock="Left" Width="200">TextBox</TextBox>
+        <TextBox DockPanel.Dock="Right" Width="200">TextBox</TextBox>
+        <Button DockPanel.Dock="Bottom" Margin="0 0 0 35" Height="20" Width="70">Button</Button>
+    </DockPanel>
 
-    <!-- Використовуємо Grid як батьківський контейнер -->
-    <Grid>
-        <!-- Визначаємо рядки -->
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <!-- Перший рядок -->
-            <RowDefinition Height="Auto"/>
-            <!-- Другий рядок -->
-        </Grid.RowDefinitions>
-
-        <!-- Перший рядок -->
-        <WrapPanel Grid.Row="0">
-            <Label Content="Label 1" Margin="5"/>
-            <TextBox Text="TextBox 1"/>
-            <TextBox Text="TextBox 2"/>
-            <TextBox Text="TextBox 3"/>
-            <TextBox Text="TextBox 4"/>
-            <TextBox Text="TextBox 5"/>
-            <TextBox Text="TextBox 6"/>
-            <TextBox Text="TextBox 7"/>
-            <TextBox Text="TextBox 8"/>
-        </WrapPanel>
-
-        <!-- Другий рядок -->
-        <WrapPanel Grid.Row="1">
-            <Label Content="Label 2" Margin="5"/>
-            <TextBox Text="TextBox 1"/>
-            <TextBox Text="TextBox 2"/>
-            <TextBox Text="TextBox 3"/>
-            <TextBox Text="TextBox 4"/>
-            <TextBox Text="TextBox 5"/>
-            <TextBox Text="TextBox 6"/>
-            <TextBox Text="TextBox 7"/>
-            <TextBox Text="TextBox 8"/>
-
-            <!-- Кнопка -->
-            <Button Content="Button" Width="100" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="250 30 0 0"/>
-        </WrapPanel>
-    </Grid>
-    
 </Window>
