--- a/Lab2/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/Lab2/WpfApp1/WpfApp1/MainWindow.xaml
@@ -2,11 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Task1" Height="300" Width="600">
-    <DockPanel LastChildFill="False">
-        <Label DockPanel.Dock="Top" HorizontalAlignment="Center">Label</Label>
-        <TextBox DockPanel.Dock="Left" Width="200">TextBox</TextBox>
-        <TextBox DockPanel.Dock="Right" Width="200">TextBox</TextBox>
-        <Button DockPanel.Dock="Bottom" Margin="0 0 0 35" Height="20" Width="70">Button</Button>
-    </DockPanel>
+    <Canvas Background="Aqua">
+        <Label Canvas.Top="20" Canvas.Left="20">Label</Label>
+        <TextBox Canvas.Top="40" Canvas.Left="40">TextBox</TextBox>
+        <Button Canvas.Top="60" Canvas.Left="60">Button</Button>
+    </Canvas>
 
 </Window>
