--- a/Lab2/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/Lab2/WpfApp1/WpfApp1/MainWindow.xaml
@@ -1,11 +1,44 @@
 ﻿<Window x:Class="WpfApp1.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Task1" Height="300" Width="600">
-    <Canvas Background="Aqua">
-        <Label Canvas.Top="20" Canvas.Left="20">Label</Label>
-        <TextBox Canvas.Top="40" Canvas.Left="40">TextBox</TextBox>
-        <Button Canvas.Top="60" Canvas.Left="60">Button</Button>
-    </Canvas>
-
+ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+ xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+ xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+ xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+ mc:Ignorable="d"
+ WindowStartupLocation="CenterScreen"
+ Title="TextEditor" MinHeight="250" Height="450" MinWidth="300" Width="600">
+    <Grid ShowGridLines="False">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Border Grid.Row="0" BorderBrush="#FFCBBEBE" BorderThickness="2" CornerRadius="10">
+            <StackPanel Grid.Row="0" Orientation="Horizontal">
+                <Button Width="50" Height="50">
+                    <Image ToolTip="Open" Source="./Images/Open.png"/>
+                </Button>
+                <Button Width="50" Height="50">
+                    <Image ToolTip="Clear" Source="./Images/Clear.png"/>
+                </Button>
+                <Button Width="50" Height="50">
+                    <Image ToolTip="Copy" Source="./Images/Copy.png"/>
+                </Button>
+                <Button Width="50" Height="50">
+                    <Image ToolTip="Paste" Source="./Images/Paste.png"/>
+                </Button>
+            </StackPanel>
+        </Border>
+        <Border Grid.Row="1" BorderBrush="#FFCBBEBE" BorderThickness="2" CornerRadius="10">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <TextBox Grid.Row="0" Margin="10" TextWrapping="Wrap" 
+VerticalScrollBarVisibility="Visible"/>
+                <DockPanel Grid.Row="1" Margin="10 5 10 10">
+                    <Button Width="30" DockPanel.Dock="Bottom" Content="OK" />
+                </DockPanel>
+            </Grid>
+        </Border>
+    </Grid>
 </Window>
