--- a/Lab2/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/Lab2/WpfApp1/WpfApp1/MainWindow.xaml
@@ -1,44 +1,76 @@
 ﻿<Window x:Class="WpfApp1.MainWindow"
- xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
- mc:Ignorable="d"
- WindowStartupLocation="CenterScreen"
- Title="TextEditor" MinHeight="250" Height="450" MinWidth="300" Width="600">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
+        Title="TextEditor" MinHeight="250" Height="450" MinWidth="300" Width="600">
+
+    <Window.Resources>
+        <!--Градієнтний фон-->
+        <LinearGradientBrush x:Key="LinearPanelBrush">
+            <GradientStop Color="Yellow" Offset="0"></GradientStop>
+            <GradientStop Color="Aqua" Offset="0.5"></GradientStop>
+            <GradientStop Color="Yellow" Offset="0.8"></GradientStop>
+        </LinearGradientBrush>
+
+        <!-- Стиль для кнопок -->
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderBrush" Value="White"/>
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+    </Window.Resources>
+
     <Grid ShowGridLines="False">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
+
+        <!--Верхня панель-->
         <Border Grid.Row="0" BorderBrush="#FFCBBEBE" BorderThickness="2" CornerRadius="10">
-            <StackPanel Grid.Row="0" Orientation="Horizontal">
-                <Button Width="50" Height="50">
+            <StackPanel Grid.Row="0" Orientation="Horizontal" Background="{StaticResource LinearPanelBrush}">
+                <Button Width="50" Height="50" Command="ApplicationCommands.Open">
                     <Image ToolTip="Open" Source="./Images/Open.png"/>
                 </Button>
-                <Button Width="50" Height="50">
+                <Button Width="50" Height="50" Command="ApplicationCommands.Close">
                     <Image ToolTip="Clear" Source="./Images/Clear.png"/>
                 </Button>
-                <Button Width="50" Height="50">
+                <Button Width="50" Height="50" Command="ApplicationCommands.Copy" CommandTarget="{Binding ElementName=MainTextBox}">
                     <Image ToolTip="Copy" Source="./Images/Copy.png"/>
                 </Button>
-                <Button Width="50" Height="50">
+                <Button Width="50" Height="50" Command="ApplicationCommands.Paste" CommandTarget="{Binding ElementName=MainTextBox}">
                     <Image ToolTip="Paste" Source="./Images/Paste.png"/>
                 </Button>
             </StackPanel>
         </Border>
+
+        <!--Нижня панелька-->
         <Border Grid.Row="1" BorderBrush="#FFCBBEBE" BorderThickness="2" CornerRadius="10">
-            <Grid>
+            <Grid Background="{StaticResource LinearPanelBrush}">
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <TextBox Grid.Row="0" Margin="10" TextWrapping="Wrap" 
-VerticalScrollBarVisibility="Visible"/>
+
+                <TextBox x:Name="MainTextBox"
+                         Grid.Row="0"
+                         Margin="10"
+                         AcceptsReturn="True"
+                         TextWrapping="Wrap"
+                         VerticalScrollBarVisibility="Visible"
+                         FontSize="{Binding ElementName=FontSlider, Path=Value, UpdateSourceTrigger=PropertyChanged}"/>
+
+                <!--Панель з повзунком та кнопкою-->
                 <DockPanel Grid.Row="1" Margin="10 5 10 10">
-                    <Button Width="30" DockPanel.Dock="Bottom" Content="OK" />
+                    <Label>Розмір шрифту:</Label>
+                    <Slider Margin="4" MinWidth="100" Name="FontSlider" Maximum="100" Minimum="12"/>
+                    <Button Width="30" DockPanel.Dock="Bottom" Style="{x:Null}" Content="OK" ToolTip="Save" Command="ApplicationCommands.Save"/>
                 </DockPanel>
             </Grid>
         </Border>
     </Grid>
+    
 </Window>
